--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/three": "^0.164.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "^3.2.5",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "webpack": "^5.91.0",
